syntax= "proto3";

package ads;

option go_package = "adspb";

message Ads {
    string id = 1;
    string user_id = 2;
    string title = 3;
    string content = 4;
    string address = 5;
    string email = 6;
    string phone = 7;
    string banner_url = 8;
}

message CreateAdsRequest {
    Ads ads = 1;
}

message CreateAdsResponse {
    Ads ads = 1;
}

message ReadAdsRequest {
    string ads_id = 1;
}

message ReadAdsResponse {
    Ads ads = 1;
}

service AdsService {
rpc  CreateAds (CreateAdsRequest) returns (CreateAdsResponse);
rpc ReadAds (ReadAdsRequest) returns (ReadAdsResponse);
    
}